Fix social publication info z-index.

--- a/styles/layout-main.css
+++ b/styles/layout-main.css
@@ -154,6 +154,7 @@ main {
         gap: 5px;
         top: 10px;
         left: 10px;
+        z-index: 1;
       }
 
       .publication-more,
